--- a/contacto.html
+++ b/contacto.html
@@ -4,13 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Contacto</title>
 	<meta name="description" content="Organización que ofrece servicios de consultoría en  Sustentabilidad para pequeñas, medianas y grandes empresas">
-   	<meta name="keywords"  content="RESPONSABILIDAD SOCIAL EMPRESARIAL, RSE, REDUCIR, REUTILIZAR, RECICLAR, TRES R, SUSTENTABILIDAD, TRIPLE IMPACTO, EMPRESA TIPO B">
-   	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+   <meta name="keywords"  content="RESPONSABILIDAD SOCIAL EMPRESARIAL, RSE, REDUCIR, REUTILIZAR, RECICLAR, TRES R, SUSTENTABILIDAD, TRIPLE IMPACTO, EMPRESA TIPO B">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<script src="https://kit.fontawesome.com/95df101b02.js" crossorigin="anonymous"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header class="flex-header">
@@ -35,16 +34,16 @@
                 <a class="nav-link" href="contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-2x header-redes"></i></a>
+                <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-lg header-redes ml-4"></i></a>
               </li>
               <li class="nav-item">
-                <a href="https://es-es.facebook.com/3RIDEAS" class="nav-link"><i class="fab fa-facebook-square text-secondary fa-2x header-redes"></i></a>
+                <a href="https://es-es.facebook.com/3RIDEAS" class="nav-link"><i class="fab fa-facebook-square text-secondary fa-lg header-redes"></i></a>
               </li>
               <li class="nav-item">
-                <a href="https://twitter.com/3rideas" class="nav-link"><i class="fab fa-twitter-square text-secondary fa-2x header-redes"></i></a>
+                <a href="https://twitter.com/3rideas" class="nav-link"><i class="fab fa-twitter-square text-secondary fa-lg header-redes"></i></a>
               </li>
               <li class="nav-item">
-                <a href="https://www.linkedin.com/company/3r-ideas" class="nav-link"><i class="fab fa-linkedin text-secondary fa-2x header-redes"></i></a>
+                <a href="https://www.linkedin.com/company/3r-ideas" class="nav-link"><i class="fab fa-linkedin text-secondary fa-lg header-redes"></i></a>
               </li>
           </ul>
       </div>
@@ -107,17 +106,17 @@
       <div id="ft-centro">
         <h3 class="text-light"><strong>3R IDEAS</strong></h3>
         <div class="ft-grid-1">
-          <i class="fas fa-phone-alt text-light ft-redes" id="tel-icono"></i><p class="text-white ft-enlaces" id="tel-enlace">+54 911 6141-4804</p>
-          <i class="fas fa-envelope text-light ft-redes" id="mail-icono"></i><p class="text-white ft-enlaces" id="mail-enlace">hola@3rideas.com</p>
-          <i class="fas fa-map-marker-alt text-light ft-redes" id="map-icono"></i><p class="text-white ft-enlaces" id="map-enlace">Ciudad Autónoma de Buenos Aires | Argentina </p>
+          <i class="fas fa-phone-alt text-light ft-redes fa-sm" id="tel-icono"></i><p class="text-white ft-enlaces" id="tel-enlace">+54 911 6141-4804</p>
+          <i class="fas fa-envelope text-light ft-redes fa-sm" id="mail-icono"></i><p class="text-white ft-enlaces" id="mail-enlace">hola@3rideas.com</p>
+          <i class="fas fa-map-marker-alt text-light ft-redes fa-sm" id="map-icono"></i><p class="text-white ft-enlaces" id="map-enlace">Ciudad Autónoma de Buenos Aires | Argentina </p>
         </div>
       </div>   
       <div id="ft-derecha">
         <div class="ft-grid-2">
-          <i id="insta-icono" class="fab fa-instagram text-light ft-redes-1" id="insta-enlace"></i><a href="https://www.instagram.com/3rideas_/"><p class="text-white ft-enlaces-1">@3rideas_</p></a>
-          <i id="fb-icono" class="fab fa-facebook-square text-light ft-redes-1" id="fb-icono"></i><a href="https://es-es.facebook.com/3RIDEAS"><p class="text-white ft-enlaces-1" id="fb-enlace">/3R IDEAS</p></a>
-          <i id="tw-icono" class="fab fa-twitter-square text-light ft-redes-1" id="tw-enlace"></i><a href="https://twitter.com/3rideas"><p class="text-white ft-enlaces-1">@3rideas</p></a>
-          <i id="lin-icono" class="fab fa-linkedin text-light ft-redes-1" id="lin-enlace"></i><a href="https://www.linkedin.com/company/3r-ideas"><p class="text-white ft-enlaces-1">3R Ideas</p></a>
+          <i id="insta-icono" class="fab fa-instagram text-light ft-redes-1 fa-sm" id="insta-enlace"></i><a href="https://www.instagram.com/3rideas_/"><p class="text-white ft-enlaces-1">@3rideas_</p></a>
+          <i id="fb-icono" class="fab fa-facebook-square text-light ft-redes-1 fa-sm" id="fb-icono"></i><a href="https://es-es.facebook.com/3RIDEAS"><p class="text-white ft-enlaces-1" id="fb-enlace">/3R IDEAS</p></a>
+          <i id="tw-icono" class="fab fa-twitter-square text-light ft-redes-1 fa-sm" id="tw-enlace"></i><a href="https://twitter.com/3rideas"><p class="text-white ft-enlaces-1">@3rideas</p></a>
+          <i id="lin-icono" class="fab fa-linkedin text-light ft-redes-1 fa-sm" id="lin-enlace"></i><a href="https://www.linkedin.com/company/3r-ideas"><p class="text-white ft-enlaces-1">3R Ideas</p></a>
         </div>
       </div>     
     </div>     	
