--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Organización que ofrece servicios de consultoría en  Sustentabilidad para pequeñas, medianas y grandes empresas">
   <meta name="keywords"  content="RESPONSABILIDAD SOCIAL EMPRESARIAL, RSE, REDUCIR, REUTILIZAR, RECICLAR, TRES R, SUSTENTABILIDAD, TRIPLE IMPACTO, EMPRESA TIPO B">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -14,7 +14,6 @@
   <link href="../icofont/icofont.min.css" rel="stylesheet">
   <link href="../boxicons/css/boxicons.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/95df101b02.js" crossorigin="anonymous"></script>	
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
 </head>
 <body>	
 	<header class="flex-header">			 
@@ -39,29 +38,31 @@
         			<a class="nav-link" href="contacto.html">Contacto</a>
         		</li>
             <li class="nav-item">
-              <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-2x header-redes"></i></a>
+              <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-lg header-redes ml-4"></i></a>
             </li>
             <li class="nav-item">
-              <a href="https://es-es.facebook.com/3RIDEAS" class="nav-link"><i class="fab fa-facebook-square text-secondary fa-2x header-redes"></i></a>
+              <a href="https://es-es.facebook.com/3RIDEAS" class="nav-link"><i class="fab fa-facebook-square text-secondary fa-lg header-redes"></i></a>
             </li>
             <li class="nav-item">
-              <a href="https://twitter.com/3rideas" class="nav-link"><i class="fab fa-twitter-square text-secondary fa-2x header-redes"></i></a>
+              <a href="https://twitter.com/3rideas" class="nav-link"><i class="fab fa-twitter-square text-secondary fa-lg header-redes"></i></a>
             </li>
             <li class="nav-item">
-              <a href="https://www.linkedin.com/company/3r-ideas" class="nav-link"><i class="fab fa-linkedin text-secondary fa-2x header-redes"></i></a>
+              <a href="https://www.linkedin.com/company/3r-ideas" class="nav-link"><i class="fab fa-linkedin text-secondary fa-lg header-redes"></i></a>
             </li>
           </ul>
 			</div>
 		</nav>		    			       	         
 	</header>
-	<section id="hero" class="d-flex justify-content-center align-items-center">
-    	<div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
-      		<h2>Ayudamos a empresas y organizaciones a <strong>repensar</strong></h2>
+  <div class="inicio">
+    <section id="hero" class="d-flex justify-content-center align-items-center">
+      <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
+          <h2>Ayudamos a empresas y organizaciones a <strong>repensar</strong></h2>
           <h2>los procesos en cada una de las etapas de su cadena</h2> 
-          <h2>de valor para <strong>reducir</strong> su impacto ambiental.</h2>      		
+          <h2>de valor para <strong>reducir</strong> su impacto ambiental.</h2>         
           <a href="contacto.html" class="btn-get-started">¡Empecemos!</a>
-    	</div>
-  </section>
+      </div>
+    </section>
+  </div>
   <section>
     <div class="gridIndex">
       <div id="indexIzquierda">
@@ -106,17 +107,17 @@
       <div id="ft-centro">
         <h3 class="text-light"><strong>3R IDEAS</strong></h3>
         <div class="ft-grid-1">
-          <i class="fas fa-phone-alt text-light ft-redes" id="tel-icono"></i><p class="text-white ft-enlaces" id="tel-enlace">+54 911 6141-4804</p>
-          <i class="fas fa-envelope text-light ft-redes" id="mail-icono"></i><p class="text-white ft-enlaces" id="mail-enlace">hola@3rideas.com</p>
-          <i class="fas fa-map-marker-alt text-light ft-redes" id="map-icono"></i><p class="text-white ft-enlaces" id="map-enlace">Ciudad Autónoma de Buenos Aires | Argentina </p>
+          <i class="fas fa-phone-alt text-light ft-redes fa-sm" id="tel-icono"></i><p class="text-white ft-enlaces" id="tel-enlace">+54 911 6141-4804</p>
+          <i class="fas fa-envelope text-light ft-redes fa-sm" id="mail-icono"></i><p class="text-white ft-enlaces" id="mail-enlace">hola@3rideas.com</p>
+          <i class="fas fa-map-marker-alt text-light ft-redes fa-sm" id="map-icono"></i><p class="text-white ft-enlaces" id="map-enlace">Ciudad Autónoma de Buenos Aires | Argentina </p>
         </div>
       </div>   
       <div id="ft-derecha">
         <div class="ft-grid-2">
-          <i id="insta-icono" class="fab fa-instagram text-light ft-redes-1" ></i><a href="https://www.instagram.com/3rideas_/"><p class="text-white ft-enlaces-1" id="insta-enlace">@3rideas_</p></a>
-          <i id="fb-icono" class="fab fa-facebook-square text-light ft-redes-1"></i><a href="https://es-es.facebook.com/3RIDEAS"><p class="text-white ft-enlaces-1" id="fb-enlace">/3R IDEAS</p></a>
-          <i id="tw-icono" class="fab fa-twitter-square text-light ft-redes-1"></i><a href="https://twitter.com/3rideas"><p class="text-white ft-enlaces-1" id="tw-enlace">@3rideas</p></a>
-          <i id="lin-icono" class="fab fa-linkedin text-light ft-redes-1"></i><a href="https://www.linkedin.com/company/3r-ideas"><p class="text-white ft-enlaces-1" id="lin-enlace">3R Ideas</p></a>
+          <i id="insta-icono" class="fab fa-instagram text-light ft-redes-1 fa-sm" ></i><a href="https://www.instagram.com/3rideas_/"><p class="text-white ft-enlaces-1" id="insta-enlace">@3rideas_</p></a>
+          <i id="fb-icono" class="fab fa-facebook-square text-light ft-redes-1 fa-sm"></i><a href="https://es-es.facebook.com/3RIDEAS"><p class="text-white ft-enlaces-1" id="fb-enlace">/3R IDEAS</p></a>
+          <i id="tw-icono" class="fab fa-twitter-square text-light ft-redes-1 fa-sm"></i><a href="https://twitter.com/3rideas"><p class="text-white ft-enlaces-1" id="tw-enlace">@3rideas</p></a>
+          <i id="lin-icono" class="fab fa-linkedin text-light ft-redes-1 fa-sm"></i><a href="https://www.linkedin.com/company/3r-ideas"><p class="text-white ft-enlaces-1" id="lin-enlace">3R Ideas</p></a>
         </div>
       </div>     
     </div>     	
