--- a/nosotros.html
+++ b/nosotros.html
@@ -6,11 +6,10 @@
   <meta name="description" content="Organización que ofrece servicios de consultoría en  Sustentabilidad para pequeñas, medianas y grandes empresas">
   <meta name="keywords"  content="RESPONSABILIDAD SOCIAL EMPRESARIAL, RSE, REDUCIR, REUTILIZAR, RECICLAR, TRES R, SUSTENTABILIDAD, TRIPLE IMPACTO, EMPRESA TIPO B">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/95df101b02.js" crossorigin="anonymous"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header class="flex-header">
@@ -35,42 +34,50 @@
         				<a class="nav-link" href="contacto.html">Contacto</a>
         			</li>
               <li class="nav-item">
-                <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-2x header-redes"></i></a>
+                <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-lg header-redes ml-4"></i></a>
               </li>
               <li class="nav-item">
-                <a href="https://es-es.facebook.com/3RIDEAS" class="nav-link"><i class="fab fa-facebook-square text-secondary fa-2x header-redes"></i></a>
+                <a href="https://es-es.facebook.com/3RIDEAS" class="nav-link"><i class="fab fa-facebook-square text-secondary fa-lg header-redes"></i></a>
               </li>
               <li class="nav-item">
-                <a href="https://twitter.com/3rideas" class="nav-link"><i class="fab fa-twitter-square text-secondary fa-2x header-redes"></i></a>
+                <a href="https://twitter.com/3rideas" class="nav-link"><i class="fab fa-twitter-square text-secondary fa-lg header-redes"></i></a>
               </li>
               <li class="nav-item">
-                <a href="https://www.linkedin.com/company/3r-ideas" class="nav-link"><i class="fab fa-linkedin text-secondary fa-2x header-redes"></i></a>
+                <a href="https://www.linkedin.com/company/3r-ideas" class="nav-link"><i class="fab fa-linkedin text-secondary fa-lg header-redes"></i></a>
               </li>
     			</ul>
 			</div>
 		</nav>		       
   </header>
   <section>
-    <div id="nosotrosBackground">
-    	<h1 class="titulo" id="nosotros"><strong>Sobre nosotros</strong></h1>
-    	<p class="parrafo">3R Ideas es una Consultora de Sustentabilidad y Comunicación nacida de la pasión y el compromiso de sus dos directores por construir un mundo mejor, ambiental y socialmente equilibrado.</p>
-    	<p class="parrafo">Creemos en el poder de las personas para transformar las organizaciones. Por eso trabajamos con los distintos niveles de colaboradores para diseñar, proyectar y comunicar los cambios que cada una necesita.</p>
-    	<p class="parrafo">Los impulsamos a cambiar su visión para poner la sustentabilidad como punto de partida y motor a la hora de pensar los proyectos, seleccionar las materias primas y proveedores, definir y realizar procesos, y vincularse con sus distintos públicos. </p> 
-    </div>  
+      <div class="nosotros-content">
+        <img src="" alt="">
+        <h1 id="nosotros"><strong>Sobre nosotros</strong></h1>
+        <div class="grid-parrafo">
+          <div id="p-izquierda">
+            <p>3R Ideas es una Consultora de Sustentabilidad y Comunicación nacida de la pasión y el compromiso de sus dos directores por construir un mundo mejor, ambiental y socialmente equilibrado.</p>
+            <p>Creemos en el poder de las personas para transformar las organizaciones. Por eso trabajamos con los distintos niveles de colaboradores para diseñar, proyectar y comunicar los cambios que cada una necesita.</p>
+          </div>
+          <div id="p-derecha">
+            <p>Los impulsamos a cambiar su visión para poner la sustentabilidad como punto de partida y motor a la hora de pensar los proyectos, seleccionar las materias primas y proveedores, definir y realizar procesos, y vincularse con sus distintos públicos.</p>
+            <p id="trabajamos"><strong>Trabajamos para llevar la sustentabilidad al corazón de las organizaciones y transformarlas.</strong></p>
+          </div>
+        </div> 
+      </div>	
       <div class="grid-nosotros">
     		<div id="nosotros-izquierda">
     		<h2>Juan Manuel Chaname Ciuró Roqué
-    			<small class="text-muted">Fundador y Director</small>
+    		<br><small class="text-muted">Fundador y Director</small>
     		</h2>  	
     			<img class="directores" src="images/juan-manuel.jpg" alt="juan-manuel" id="juan-manuel">
-    			<p class="parrafo">Es un emprendedor en permanente aprendizaje, con formación en Diseño Industrial y un Posgrado en Ingeniería de Plásticos. Es Project Manager, especialista en gestión y dirección de proyectos. Trabajó en desarrollo de productos con ADN sustentable en China, Alemania e Italia.</p>    
+    			<p>Es un emprendedor en permanente aprendizaje, con formación en Diseño Industrial y un Posgrado en Ingeniería de Plásticos. Es Project Manager, especialista en gestión y dirección de proyectos. Trabajó en desarrollo de productos con ADN sustentable en China, Alemania e Italia.</p>    
     		</div>
         <div id="nosotros-derecha">
     		  <h2>Vanina Estrugo
 				  <br><small class="text-muted">Directora</small>
 			    </h2>	  		
     	     <img class="directores" src="images/vanina.jpg" alt="vanina" id="vanina">
-    			 <p class="parrafo">Emprendedora por naturaleza, es Licenciada en Relaciones Públicas con orientación en Imagen Empresaria, Organizadora de Eventos y Técnica en Ceremonial y Protocolo. Cuenta con más de 17 años de experiencia en el campo de la comunicación y una larga trayectoria en gestión de proyectos. Se dedica a la consultoría y el desarrollo de estrategias integrales para empresas, organismos no gubernamentales y emprendimientos, llevando la innovación y sostenibilidad a la gestión de los negocios.</p>    
+    			 <p>Emprendedora por naturaleza, es Licenciada en Relaciones Públicas con orientación en Imagen Empresaria, Organizadora de Eventos y Técnica en Ceremonial y Protocolo. Cuenta con más de 17 años de experiencia en el campo de la comunicación y una larga trayectoria en gestión de proyectos. Se dedica a la consultoría y el desarrollo de estrategias integrales para empresas, organismos no gubernamentales y emprendimientos, llevando la innovación y sostenibilidad a la gestión de los negocios.</p>    
     		</div>   
       </div>   	
 	</section>
@@ -82,17 +89,17 @@
       <div id="ft-centro">
         <h3 class="text-light"><strong>3R IDEAS</strong></h3>
         <div class="ft-grid-1">
-          <i class="fas fa-phone-alt text-light ft-redes" id="tel-icono"></i><p class="text-white ft-enlaces" id="tel-enlace">+54 911 6141-4804</p>
-          <i class="fas fa-envelope text-light ft-redes" id="mail-icono"></i><p class="text-white ft-enlaces" id="mail-enlace">hola@3rideas.com</p>
-          <i class="fas fa-map-marker-alt text-light ft-redes" id="map-icono"></i><p class="text-white ft-enlaces" id="map-enlace">Ciudad Autónoma de Buenos Aires | Argentina </p>
+          <i class="fas fa-phone-alt text-light ft-redes fa-sm" id="tel-icono"></i><p class="text-white ft-enlaces" id="tel-enlace">+54 911 6141-4804</p>
+          <i class="fas fa-envelope text-light ft-redes fa-sm" id="mail-icono"></i><p class="text-white ft-enlaces" id="mail-enlace">hola@3rideas.com</p>
+          <i class="fas fa-map-marker-alt text-light ft-redes fa-sm" id="map-icono"></i><p class="text-white ft-enlaces" id="map-enlace">Ciudad Autónoma de Buenos Aires | Argentina </p>
         </div>
       </div>   
       <div id="ft-derecha">
         <div class="ft-grid-2">
-          <i id="insta-icono" class="fab fa-instagram text-light ft-redes-1" id="insta-enlace"></i><a href="https://www.instagram.com/3rideas_/"><p class="text-white ft-enlaces-1">@3rideas_</p></a>
-          <i id="fb-icono" class="fab fa-facebook-square text-light ft-redes-1" id="fb-icono"></i><a href="https://es-es.facebook.com/3RIDEAS"><p class="text-white ft-enlaces-1" id="fb-enlace">/3R IDEAS</p></a>
-          <i id="tw-icono" class="fab fa-twitter-square text-light ft-redes-1" id="tw-enlace"></i><a href="https://twitter.com/3rideas"><p class="text-white ft-enlaces-1">@3rideas</p></a>
-          <i id="lin-icono" class="fab fa-linkedin text-light ft-redes-1" id="lin-enlace"></i><a href="https://www.linkedin.com/company/3r-ideas"><p class="text-white ft-enlaces-1">3R Ideas</p></a>
+          <i id="insta-icono" class="fab fa-instagram text-light ft-redes-1 fa-sm" id="insta-enlace"></i><a href="https://www.instagram.com/3rideas_/"><p class="text-white ft-enlaces-1">@3rideas_</p></a>
+          <i id="fb-icono" class="fab fa-facebook-square text-light ft-redes-1 fa-sm" id="fb-icono"></i><a href="https://es-es.facebook.com/3RIDEAS"><p class="text-white ft-enlaces-1" id="fb-enlace">/3R IDEAS</p></a>
+          <i id="tw-icono" class="fab fa-twitter-square text-light ft-redes-1 fa-sm" id="tw-enlace"></i><a href="https://twitter.com/3rideas"><p class="text-white ft-enlaces-1">@3rideas</p></a>
+          <i id="lin-icono" class="fab fa-linkedin text-light ft-redes-1 fa-sm" id="lin-enlace"></i><a href="https://www.linkedin.com/company/3r-ideas"><p class="text-white ft-enlaces-1">3R Ideas</p></a>
         </div>
       </div>     
     </div>      
