--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
         			<a class="nav-link" href="contacto.html">Contacto</a>
         		</li>
             <li class="nav-item">
-              <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-lg header-redes ml-4"></i></a>
+              <a href="https://www.instagram.com/3rideas_/"><i class="fab fa-instagram text-secondary fa-lg header-redes ml-4"></i></a>
             </li>
             <li class="nav-item">
-              <a href="https://es-es.facebook.com/3RIDEAS" class="nav-link"><i class="fab fa-facebook-square text-secondary fa-lg header-redes"></i></a>
+              <a href="https://es-es.facebook.com/3RIDEAS"><i class="fab fa-facebook-square text-secondary fa-lg header-redes"></i></a>
             </li>
             <li class="nav-item">
-              <a href="https://twitter.com/3rideas" class="nav-link"><i class="fab fa-twitter-square text-secondary fa-lg header-redes"></i></a>
+              <a href="https://twitter.com/3rideas"><i class="fab fa-twitter-square text-secondary fa-lg header-redes"></i></a>
             </li>
             <li class="nav-item">
-              <a href="https://www.linkedin.com/company/3r-ideas" class="nav-link"><i class="fab fa-linkedin text-secondary fa-lg header-redes"></i></a>
+              <a href="https://www.linkedin.com/company/3r-ideas"><i class="fab fa-linkedin text-secondary fa-lg header-redes"></i></a>
             </li>
           </ul>
 			</div>
@@ -55,26 +55,25 @@
 	</header>
   <div class="inicio">
     <section id="hero" class="d-flex justify-content-center align-items-center">
-      <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
-          <h2>Ayudamos a empresas y organizaciones a <strong>repensar</strong></h2>
-          <h2>los procesos en cada una de las etapas de su cadena</h2> 
-          <h2>de valor para <strong>reducir</strong> su impacto ambiental.</h2>         
-          <a href="contacto.html" class="btn-get-started">¡Empecemos!</a>
+      <div class="container position-relative frase-inicio" data-aos="zoom-in" data-aos-delay="100">   
+        <p>Acompañamos a las organizaciones a <strong>REPENSAR</strong><br> sus procesos en cada una de las etapas de su <br>cadena de valor para <strong>REDUCIR</strong> su impacto ambiental.</p>            
       </div>
     </section>
   </div>
   <section>
     <div class="gridIndex">
       <div id="indexIzquierda">
-        <img src="images/lightbulb.jpg" alt="manos sosteniendo una planta" id="manosPlanta">
+        <img src="images/lightbulb-sun.jpg" alt="manos sosteniendo una planta" id="manosPlanta">
       </div>
-      <div id="indexDerecha">
-        <p>Creemos en el poder de las personas para transformar las organizaciones.</p>
-        <p>Creemos en los emprendedores como agentes de cambio y creadores de soluciones a los grandes problemas sociales y ambientales del presente y del futuro.</p>
-        <p>Creemos en el valor y el poder de la articulación y la cooperación entre organizaciones, empresas y emprendedores.</p>
-        <p>Creemos que las empresas del futuro deben tener la sostenibilidad incorporada en su core de negocios.</p>
-        <p>Creamos círculos virtuosos donde todos los involucrados se convierten en actor sociales comprometidos y responsables con el ambiente y sus stakeholders.</p>
-      </div>
+      <div id="indexDerecha">   
+        <!--<p>Acompañamos a las organizaciones a <strong>REPENSAR</strong> sus procesos en cada una de las etapas de su cadena de valor para <strong>REDUCIR</strong> su impacto ambiental.</p>-->
+        <p>Creemos en el poder de las <strong>personas</strong> para <strong>transformar</strong> las organizaciones.</p>
+        <p>Creemos en los <strong>emprendedores</strong> como <strong>agentes de cambio</strong> y creadores de soluciones a los grandes problemas sociales y ambientales del presente y del futuro.</p>
+        <p>Creemos en el valor y el poder de la <strong>articulación</strong> y la <strong>cooperación</strong> entre organizaciones, empresas y emprendedores.</p>
+        <p>Creemos que las <strong>empresas del futuro</strong> deben tener la sostenibilidad incorporada en su ADN.</p>
+        <p>Trabajamos con <strong>innovación</strong>, <strong>desarrollo sostenible</strong> y <strong>economía circular</strong> como pilares.</p>
+      </div>  
+      <p id="creamos">Creamos <strong>círculos virtuosos</strong> donde todos los involucrados se convierten en <strong>actor sociales comprometidos y responsables</strong> con el ambiente y sus stakeholders.</p>
     </div>        
   </section>		 	 
 	<section>
@@ -90,7 +89,7 @@
       <div class="gridIndexServiciosCentro">
         <a href="servicios.html#seccionCapacitaciones"><img src="images/training.png" class="imagenesIndexServicios"></a>
         <h3 class="tituloIndexServicios"><strong>Capacitaciones</strong></h3>
-        <p class="parrafoIndexServicios">Te acompañamos en la capacitación de tus recursos y tus públicos objetivos para que incorporen la sustentabilidad, el cuidado de los recursos, la economía circular y la conciencia ambiental como parte de su accionar cotidiano.</p>
+        <p class="parrafoIndexServicios">Te acompañamos en la capacitación de tus recursos y tus públicos objetivos para que puedan incorporar la sustentabilidad, el cuidado de los recursos, la economía circular y la conciencia ambiental como parte de su accionar cotidiano.</p>
       </div>
       <div class="gridIndexServiciosDerecha">
         <a href="servicios.html#seccionComunicacion"><img src="images/shout.png" class="imagenesIndexServicios"></a>
@@ -99,7 +98,7 @@
       </div>    
     </div>
   </section>
-	<footer class="bg-dark">
+	<footer>
 		<div class="container footer-grid">
       <div id="ft-izquierda">
         <img src="images/3R-IDEAS.png" id="footerLogo"> 
