--- a/servicios.html
+++ b/servicios.html
@@ -49,18 +49,20 @@
         </nav>             
   </header>
     <section>
-        <div class="gridIndexServicios">
-            <div class="gridIndexServiciosIzquierda">
-                <h3 class="tituloIndexServicios mt-5"><strong>Estrategia y Gestión</strong></h3>
-                <a href="servicios.html#seccionEstrategia"><img src="images/graph.png" class="imagenesIndexServicios mt-2"></a>
-            </div>
-            <div class="gridIndexServiciosCentro">
-                <h3 class="tituloIndexServicios mt-5"><strong>Capacitaciones</strong></h3>
-                <a href="servicios.html#seccionCapacitaciones"><img src="images/training.png" class="imagenesIndexServicios mt-2"></a>
-            </div>
-             <div class="gridIndexServiciosDerecha">
-                <h3 class="tituloIndexServicios mt-5"><strong>Comunicación de Impacto</strong></h3>
-                <a href="servicios.html#seccionComunicacion"><img src="images/shout.png" class="imagenesIndexServicios mt-2"></a>
+        <div class="servicios-background">
+           <div class="gridIndexServicios">
+                <div class="gridIndexServiciosIzquierda">
+                    <h3 class="tituloIndexServicios mt-5"><strong>Estrategia y Gestión</strong></h3>
+                    <a href="servicios.html#seccionEstrategia"><img src="images/graph.png" class="imagenesIndexServicios mt-2"></a>
+                </div>
+                <div class="gridIndexServiciosCentro">
+                    <h3 class="tituloIndexServicios mt-5"><strong>Capacitaciones</strong></h3>
+                    <a href="servicios.html#seccionCapacitaciones"><img src="images/training.png" class="imagenesIndexServicios mt-2"></a>
+                </div>
+                <div class="gridIndexServiciosDerecha">
+                    <h3 class="tituloIndexServicios mt-5"><strong>Comunicación de Impacto</strong></h3>
+                    <a href="servicios.html#seccionComunicacion"><img src="images/shout.png" class="imagenesIndexServicios mt-2"></a>
+                </div> 
             </div>
         </div>           
         <div id="seccionEstrategia">
@@ -86,13 +88,10 @@
             </div>
         </div>
         <div id="seccionCapacitaciones">
-            <div class="flex-rama">
-                <img src="images/treeBranch.png" alt="rama" id="branch">
-                <h2 id="capacitaciones"><strong>Capacitaciones</strong></h2>
-            </div>    
+            <h2 id="capacitaciones"><strong>Capacitaciones</strong></h2>
             <div class="grid-capacitaciones">
                 <div id="grid-capacitaciones-izquierda">
-                    <p class="text-dark">Te acompañamos en la capacitación de tus recursos y tus públicos objetivos para que incorporen la sustentabilidad, el cuidado de los recursos, la economía circular y la conciencia ambiental como parte de su accionar cotidiano.</p>
+                    <p class="text-dark">Te acompañamos en la capacitación de tus recursos y tus públicos objetivos para que puedan incorporar la sustentabilidad, el cuidado de los recursos, la economía circular y la conciencia ambiental como parte de su accionar cotidiano. </p>
                     <ul class="text-dark">
                         <li>Talleres de concientización ambiental.</li>
                         <li>Charlas de Economía Circular.</li>
@@ -107,7 +106,7 @@
             <h2 id="comunicacionDeImpacto"><strong>Comunicación de Impacto</strong></h2>
             <div class="grid-comunicacion">
                 <div id="grid-comunicacion-izquierda">
-                    <img src="images/hashtagg.png" class="img-fluid" id="hashtagg">
+                    <img src="images/social-girl.png" class="img-fluid" id="hashtagg">
                 </div>
                 <div id="grid-comunicacion-derecha">
                     <p class="text-dark">Te ayudamos a comunicar lo que tu empresa dice y hace, de manera estratégica, con una imagen profesional y adaptada a cada uno de tus públicos, para que el mensaje llegue de forma adecuada y logre el impacto deseado.</p>
@@ -127,7 +126,7 @@
             </div>            
         </div>
     </section>
-    <footer class="bg-dark">
+    <footer>
         <div class="container footer-grid">
       <div id="ft-izquierda">
         <img src="images/3R-IDEAS.png" id="footerLogo"> 
@@ -150,7 +149,7 @@
       </div>     
     </div>      
     <div id="derechos">
-            <p class="text-dark text-center" id="derechosP">Todos los derechos reservados &copy; 2020. Diseñado por <strong>Manuel Lacarra</strong></p>
+            <p class="text-dark text-center" id="derechosP">&copy; Copyright 2020 3R IDEAS I Todos los derechos reservados I Diseño y desarrollo <strong>Manuel Lacarra</strong></p>
         </div>                
     </footer>    
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
