--- a/nosotros.html
+++ b/nosotros.html
@@ -50,38 +50,41 @@
 		</nav>		       
   </header>
   <section>
+    <div class="nosotros-background">
       <div class="nosotros-content">
-        <img src="" alt="">
         <h1 id="nosotros"><strong>Sobre nosotros</strong></h1>
         <div class="grid-parrafo">
           <div id="p-izquierda">
-            <p>3R Ideas es una Consultora de Sustentabilidad y Comunicación nacida de la pasión y el compromiso de sus dos directores por construir un mundo mejor, ambiental y socialmente equilibrado.</p>
-            <p>Creemos en el poder de las personas para transformar las organizaciones. Por eso trabajamos con los distintos niveles de colaboradores para diseñar, proyectar y comunicar los cambios que cada una necesita.</p>
-          </div>
+            <p><strong>3R Ideas</strong> es una <strong>Consultora de Sustentabilidad y Comunicación</strong> nacida de la pasión y el compromiso de sus dos directores por construir un mundo mejor, ambiental y socialmente equilibrado.</p>
+            <p>Creemos en el poder de las personas para <strong>transformar las organizaciones</strong>. Por eso trabajamos con los distintos niveles de colaboradores para diseñar, proyectar y comunicar los cambios que cada una necesita.</p>
+            <p>Impulsamos un <strong>cambio de visión</strong> para poner la <strong>sustentabilidad como punto de partida</strong> y motor a la hora de pensar los proyectos, seleccionar las materias primas y proveedores, definir y realizar procesos, y vincularse con sus distintos públicos.</p>
+         </div>
           <div id="p-derecha">
-            <p>Los impulsamos a cambiar su visión para poner la sustentabilidad como punto de partida y motor a la hora de pensar los proyectos, seleccionar las materias primas y proveedores, definir y realizar procesos, y vincularse con sus distintos públicos.</p>
-            <p id="trabajamos"><strong>Trabajamos para llevar la sustentabilidad al corazón de las organizaciones y transformarlas.</strong></p>
+            <p class="trabajamos">Trabajamos para llevar la sustentabilidad al corazón de las organizaciones y transformarlas.</p>
+            <p>Acompañamos a las organizaciones a <strong>repensar y replantear</strong> los procesos en cada una de las etapas de su cadena de valor para <strong>reducir</strong> su impacto ambiental.</p>
+            <p>Desarrollamos estrategias, programas de sustentabilidad, proyectos de triple impacto y los ayudamos a llegar de la mejor manera a cada uno de sus públicos.</p>
+            <p class="trabajamos">Trabajamos con <strong>innovación, desarrollo sostenible y economía circular</strong> como pilares.</p>
           </div>
         </div> 
-      </div>	
-      <div class="grid-nosotros">
-    		<div id="nosotros-izquierda">
-    		<h2>Juan Manuel Chaname Ciuró Roqué
-    		<br><small class="text-muted">Fundador y Director</small>
-    		</h2>  	
-    			<img class="directores" src="images/juan-manuel.jpg" alt="juan-manuel" id="juan-manuel">
-    			<p>Es un emprendedor en permanente aprendizaje, con formación en Diseño Industrial y un Posgrado en Ingeniería de Plásticos. Es Project Manager, especialista en gestión y dirección de proyectos. Trabajó en desarrollo de productos con ADN sustentable en China, Alemania e Italia.</p>    
-    		</div>
-        <div id="nosotros-derecha">
-    		  <h2>Vanina Estrugo
-				  <br><small class="text-muted">Directora</small>
-			    </h2>	  		
-    	     <img class="directores" src="images/vanina.jpg" alt="vanina" id="vanina">
-    			 <p>Emprendedora por naturaleza, es Licenciada en Relaciones Públicas con orientación en Imagen Empresaria, Organizadora de Eventos y Técnica en Ceremonial y Protocolo. Cuenta con más de 17 años de experiencia en el campo de la comunicación y una larga trayectoria en gestión de proyectos. Se dedica a la consultoría y el desarrollo de estrategias integrales para empresas, organismos no gubernamentales y emprendimientos, llevando la innovación y sostenibilidad a la gestión de los negocios.</p>    
-    		</div>   
-      </div>   	
+      </div>  
+    </div>
+    <div class="grid-nosotros">
+    	<div id="nosotros-izquierda">
+    		<h2>Juan Manuel Chaname Ciuró Roqué</h2>
+    		  <h3 class="text-muted">Fundador y Director</h3> 		  	
+    		<img class="directores" src="images/juan-manuel.jpg" alt="juan-manuel" id="juan-manuel">
+    		<p>Es un emprendedor en permanente aprendizaje, con formación en Diseño Industrial y un Posgrado en Ingeniería de Plásticos. Es Project Manager, especialista en gestión y dirección de proyectos. Trabajó en desarrollo de productos con ADN sustentable en China, Alemania e Italia.</p>    
+    	</div>
+      <div id="nosotros-derecha">
+    		<h2>Vanina Estrugo
+				  <h3 class="text-muted">Directora</h3>
+			   </h2>	  		
+    	   <img class="directores" src="images/vanina.jpg" alt="vanina" id="vanina">
+    		<p>Emprendedora por naturaleza, es Licenciada en Relaciones Públicas con orientación en Imagen Empresaria, Organizadora de Eventos y Técnica en Ceremonial y Protocolo. Cuenta con más de 17 años de experiencia en el campo de la comunicación y una larga trayectoria en gestión de proyectos. Se dedica a la consultoría y el desarrollo de estrategias integrales para empresas, organismos no gubernamentales y emprendimientos, llevando la innovación y sostenibilidad a la gestión de los negocios.</p>    
+    	</div>   
+    </div>   	
 	</section>
-	<footer class="bg-dark">
+	<footer>
     <div class="container footer-grid">
       <div id="ft-izquierda">
         <img src="images/3R-IDEAS.png" id="footerLogo"> 
@@ -104,7 +107,7 @@
       </div>     
     </div>      
     <div id="derechos">
-      <p class="text-dark text-center" id="derechosP">Todos los derechos reservados &copy; 2020. Diseñado por <strong>Manuel Lacarra</strong></p>
+      <p class="text-dark text-center" id="derechosP">&copy; Copyright 2020 3R IDEAS I Todos los derechos reservados I Diseño y desarrollo <strong>Manuel Lacarra</strong></p>
     </div>          
   </footer>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
