--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <p class="parrafoIndexServicios">Te acompañamos en la capacitación de tus recursos y tus públicos objetivos para que puedan incorporar la sustentabilidad, el cuidado de los recursos, la economía circular y la conciencia ambiental como parte de su accionar cotidiano.</p>
       </div>
       <div class="gridIndexServiciosDerecha">
-        <a href="servicios.html#seccionComunicacion"><img src="images/shout.png" class="imagenesIndexServicios"></a>
+        <a href="servicios.html#seccionComunicacion"><img src="images/shout.png" class="imagenesIndexServicios" id="comu-impacto"></a>
         <h3 class="tituloIndexServicios"><strong>Comunicación de Impacto</strong></h3>
         <p class="parrafoIndexServicios">Te ayudamos a comunicar lo que tu empresa dice y hace, de manera estratégica, con una imagen profesional y adaptada a cada uno de tus públicos, para que el mensaje llegue de forma adecuada y logre el impacto deseado.</p>
       </div>    
